// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly 1`] = `
.c0 {
  fill: rgb(0,0,0);
  height: 10px;
  width: 10px;
}

.c0:hover {
  fill: hsl(0,0%,0%);
}

<rect
  className="bar c0"
  color="rgb(0, 0, 0)"
  size={
    Object {
      "height": 10,
      "width": 10,
    }
  }
  value={0}
  x={0}
  y={0}
/>
`;

exports[`Should render correctly and show the value 1`] = `
Array [
  .c0 {
  fill: rgb(0,0,0);
  height: 10px;
  width: 10px;
}

.c0:hover {
  fill: hsl(0,0%,0%);
}

<rect
    className="bar c0"
    color="rgb(0, 0, 0)"
    size={
      Object {
        "height": 10,
        "width": 10,
      }
    }
    value={0}
    x={0}
    y={0}
  />,
  .c0 {
  fill: rgb(33,33,33);
  pointer-events: none;
}

<text
    className="value c0"
    size={
      Object {
        "height": 10,
        "width": 10,
      }
    }
    textAnchor="middle"
    transform="translate(5, -18)"
  >
    0
  </text>,
]
`;
